--- a/Challenge Exercises/Exercise-12g.css
+++ b/Challenge Exercises/Exercise-12g.css
@@ -58,7 +58,11 @@
     font-weight: bold;
     font-size: large;
     padding: 8 12;
-    transition: 0.15;
+    -webkit-transition: 0.5s;
+    -moz-transition: 0.5s;
+    -ms-transition: 0.5s;
+    -o-transition: 0.5s;
+    transition: 0.5s;
 }
 
 .follow-button:hover {
